[tool.poetry]
name = "touchbar-lyric"
version = "0.6.3"
description = "Display lyrics on your touchbar with BTT"
authors = ["Chenghao Mou <mouchenghao@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
applescript = "^2021.2.9"
qqmusic-api = "^0.1"
cachier = "^1.5.0"
typer = "^0.3.2"
loguru = "^0.5.3"
strsimpy = "^0.2.0"
coverage = "^5.5"
regex = "^2021.3.17"
hanziconv = "^0.3.2"
pycrypto = "^2.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
